@@ -14,3 +14,4 @@ Other contributors (as mentionend in :copyright:s) are:
 - Adam Blinkinsop <blinks@acm.org>
 - Kirk McDonald
 - Christopher Creutzig <christopher@creutzig.de>
+- Frits van Bommel
